--- a/CV.html
+++ b/CV.html
@@ -20,7 +20,7 @@
   <header class="header">
     <div class="header-inner">
       <a class="header-logo" href="./index.html">
-        <img src="./images/projects/スクリーンショット 2022-01-28 17.37.12.png" alt="KISSA">
+        <img src="./images/projects/header-logo.png" alt="logo">
       </a>
       <button class="toggle-menu-button"></button>
       <div class="header-site-menu">
