--- a/Slope_Drop.html
+++ b/Slope_Drop.html
@@ -20,7 +20,7 @@
   <header class="header">
     <div class="header-inner">
       <a class="header-logo" href="./index.html">
-        <img src="./images/projects/スクリーンショット 2022-01-28 17.37.12.png" alt="KISSA">
+        <img src="./images/projects/header-logo.png" alt="header">
       </a>
       <button class="toggle-menu-button"></button>
       <div class="header-site-menu">
@@ -42,10 +42,10 @@
       <p></p>
     </div>
     <div class="feature">
-      <img src="./images/projects/IMG_4475.JPG" alt="コーヒーを淹れている画像">
+      <img src="./images/projects/slope_drop.JPG" alt="slope_drop">
       <div class="feature-text">
-        <h2>コーヒーに落とし込まれた日本の喫茶文化</h2>
-        <p>「喫茶」とは、もともと鎌倉時代に中国から伝わった、茶を嗜む習慣や作法を指す言葉だったといいます。後に発展した茶道では客人をもてなす心が何よりも大切にされ、茶室で過ごすひとときは他にない特別な時間を演出します。私たちKISSAは、茶と向き合ってきた日本の文化をコーヒーというカルチャーに落とし込み、訪れるお客さまに特別なひとときを提供したいと考えています。</p>
+        <h2>移動型スロープによるHMDと電動車椅子で構成したVRライドの降下感覚の向上</h2>
+        <p>我々は遊園地におけるアトラクション体験を提供することを目的に、HMD（Head Mounted Display）と電動車椅子で構成した VR（Virtual Reality）ライドを構築している。本研究ではこれに移動型スロープを組み合わせることで静止したスロープに比べ上昇感覚を向上させるシステムを提案する。移動型スロープは電動車椅子用のモータを用いており、HMD を装着したユーザを乗せた電動車椅子を乗せて移動でき、速度や加速度の制御もできる。本研究ではこれらを組み合わせることで、降下する坂道の曲率が変化する感覚と、持続的に坂道を降下する感覚を提示する。</p>
       </div>
     </div>
     <div class="link-button-area">
@@ -55,12 +55,12 @@
     <div class="movie">
       <h2>MOVIE</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/Z1_uSUMQKPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p>実際に現地でデモを実施している様子</p>
+      <p>ユーザが実際に体験している様子</p>
     </div>
     <div class="about">
       <div class="conference">
         <h2>CONFERENCE</h2>
-        <p>第195回ヒューマンコンピュータインタラクション研究会<br>2021.11.30 - 12.1<br>at 淡路夢舞台国際会議場</p>
+        <p>第197回ヒューマンコンピュータインタラクション研究会<br>2022.3.14 - 3.16<br>online</p>
       </div>
       <div class="credit">
         <h2>CREDIT</h2>
