--- a/sustttainer.html
+++ b/sustttainer.html
@@ -63,7 +63,7 @@
       </div>
       <div class="details">
         <h2>CREDIT</h2>
-        <p>Concept, Software Enginnering(Sensing): Shinsuke Tomizawa<br>Concept, Software Enginnering(Sensing): Masashi Kimura<br>Concept, Software Enginnering(Sensing): Akihiro Takaramoto<br>Concept, Software Enginnering(Game): Shunta Ito<br>Concept, Hardware Enginnering: Haruka Ito
+        <p>Concept, Software and Hardware Enginnering, Author: Shunta Ito<br>Concept, Software Enginnering(Sensing): Shinsuke Tomizawa<br>Concept, Software Enginnering(Sensing): Akihiro Takaramoto<br>Concept, Hardware Enginnering: Haruka Ito
         </p>
       </div>
     </div>
