--- a/UniverSound.html
+++ b/UniverSound.html
@@ -60,7 +60,7 @@
     <div class="about">
       <div class="details">
         <h2>CONFERENCE</h2>
-        <p>ACM UIST 2019 Student Innovation Contest<br>2019.10.20 - 10.23<br>at New Orleans, Germany</p>
+        <p>ACM UIST 2019 Student Innovation Contest<br>2019.10.20 - 10.23<br>at New Orleans, United States</p>
       </div>
       <div class="details">
         <h2>CREDIT</h2>
