--- a/CV.html
+++ b/CV.html
@@ -45,7 +45,7 @@
         <h2>Shunta Ito</h2>
         <p>Born in Chiba, Japan<br>shunta_ito@keio.jp</p>
       </div>
-      <img src="./images/projects/profile.jpg" alt="コーヒーを淹れている画像">
+      <img src="./images/projects/profile.jpg" alt="profile_image">
     </div>
 
     <div class="about">
@@ -63,7 +63,7 @@
     <div class="about2">
       <div class="details">
         <h2>Skills</h2>
-        <p>Programming [ C#, Java, Python ]<br>CG Tool [ Unity, Processing ]<br>Robotics Tool [ ROS2 ]<br>Electrical
+        <p>Programming [ C#, Processing, Python ]<br>CG Tool [ Unity, Processing ]<br>Robotics Tool [ ROS2 ]<br>Electrical
           Tool [ Arduino, RaspberryPi ]<br>Others [ Fusion360, 3D Printer, Laser Cutter ]
         </p>
       </div>
