--- a/ChupaChups.html
+++ b/ChupaChups.html
@@ -55,7 +55,7 @@
     <div class="movie">
       <h2>MOVIE</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/YlASyGf2pr4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p>実際に現地でデモを実施している様子</p>
+      <p>実際に装置を使用してチュッパチャップスを開封している様子</p>
     </div>
     <div class="about">
       <div class="details">
