--- a/CV.html
+++ b/CV.html
@@ -43,7 +43,8 @@
     <div class="feature">
       <div class="feature-text">
         <h2>Shunta Ito</h2>
-        <p>Born in Chiba, Japan<br>shunta_ito@keio.jp</p>
+        <p>1997年千葉県生まれ、千葉県育ち。中学、高校時代には水泳部に所属し、県大会、関東大会優勝、全国大会出場を果たす。大学時代はHuman-Computer-Interactionなどを研究テーマとする中西泰人研究室に所属し、現在も大学院生として同研究室で研究活動を行なっている。
+        0からアイデアを生み出し、それを研究に落とし込むことが得意。</p>
       </div>
       <img src="./images/projects/profile.jpg" alt="profile_image">
     </div>
@@ -55,7 +56,7 @@
       </div>
       <div class="details">
         <h2>Interests</h2>
-        <p>Experience Design<br>Human Computer Interaction<br>Virtual Reality<br>Robotics
+        <p>Experience Design<br>Human-Computer-Interaction<br>Virtual Reality<br>Robotics
         </p>
       </div>
     </div>
