--- a/CV.html
+++ b/CV.html
@@ -43,6 +43,7 @@
     <div class="feature">
       <div class="feature-text">
         <h2>Shunta Ito</h2>
+        <p>shunta_ito@keio.jp</p>
         <p>1997年千葉県生まれ、千葉県育ち。中学、高校時代には水泳部に所属し、県大会、関東大会優勝、全国大会出場を果たす。大学時代はHuman-Computer-Interactionなどを研究テーマとする中西泰人研究室に所属し、現在も大学院生として同研究室で研究活動を行なっている。
         0からアイデアを生み出し、それを研究に落とし込むことが得意。</p>
       </div>
