--- a/CV.html
+++ b/CV.html
@@ -53,7 +53,12 @@
     <div class="about">
       <div class="details">
         <h2>Education</h2>
-        <p>2021- 慶應義塾大学大学院 政策・メディア研究科　政策・メディア専攻 修士課程，中西泰人研究室所属<br>2017-2021 慶應義塾大学 環境情報学部 環境情報学科，中西泰人研究室所属<br>2013-2016 私立 成田高等学校　普通科</p>
+        <p>2021- 慶應義塾大学大学院 政策・メディア研究科　政策・メディア専攻 修士課程</p>
+        <a href="http://unitedfield.net/">
+          <p>中西泰人研究室所属</p>
+        </a>
+        <p>2017-2021 慶應義塾大学 環境情報学部 環境情報学科，中西泰人研究室所属</p>
+        <p>2013-2016 私立 成田高等学校　普通科</p>
       </div>
       <div class="details">
         <h2>Interests</h2>
