--- a/CV.html
+++ b/CV.html
@@ -57,7 +57,7 @@
         <a href="http://unitedfield.net/">
           <p>中西泰人研究室所属</p>
         </a>
-        <p>2017-2021 慶應義塾大学 環境情報学部 環境情報学科</p>
+        <p>2017-2021 慶應義塾大学 環境情報学部</p>
         <p>2013-2016 私立 成田高等学校　普通科</p>
       </div>
       <div class="details">
