--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul class="item-list">
             <li>
               <a href="./Slope_Ascent.html">
-                <img src="./images/projects/slope_ascent.jpg" alt="ガーデン捕虫器の商品画像">
+                <img src="./images/projects/slope_ascent.jpg" alt="slope_ascent">
                 <dl>
                   <dt>移動型スロープによるHMDと電動車椅子で構成したVRライドの上昇感覚の向上 </dt>
                   <dd>移動型スロープを組み合わせることで静止したスロープに比べ上昇感覚を向上させるシステムを提案。<br>(2021)</dd>
@@ -54,8 +54,17 @@
               </a>
             </li>
             <li>
+              <a href="./Slope_Drop.html">
+                <img src="./images/projects/slope_drop.JPG" alt="slope_drop">
+                <dl>
+                  <dt>移動型スロープによるHMDと電動車椅子で構成したVRライドの降下感覚の向上 </dt>
+                  <dd>移動型スロープを組み合わせることで静止したスロープに比べ降下感覚を向上させるシステムを提案。<br>(2022)</dd>
+                </dl>
+              </a>
+            </li>
+            <li>
               <a href="./WheelchairandObstacles.html">
-                <img src="./images/projects/obstacles.JPG" alt="オニオンホーの商品画像">
+                <img src="./images/projects/obstacles.JPG" alt="obstacles">
                 <dl>
                   <dt>VRライドと障害物によるアトラクション体験要素の増幅</dt>
                   <dd>HMDと電動車椅子で構成したVRライドに小規模な坂道や障害物を組み合わせることで、アトラクション体験の要素である衝突、降下、上昇体験を増幅させる手法を提案。<br>(2021)</dd>
@@ -64,7 +73,7 @@
             </li>
             <li>
               <a href="./sustttainer.html">
-                <img src="./images/projects/sustttainer.png" alt="オニオンホーの商品画像">
+                <img src="./images/projects/sustttainer.png" alt="sustttainer">
                 <dl>
                   <dt>Sustttainer</dt>
                   <dd>ジェスチャ認識とマルチタッチ機能によるさする演奏システム。<br>(2020)</dd>
@@ -80,7 +89,7 @@
           <ul class="item-list">
             <li>
               <a href="./UniverSound.html">
-                <img src="./images/projects/universound.JPG" alt="ハンドフォークの商品画像">
+                <img src="./images/projects/universound.JPG" alt="universound">
                 <dl>
                   <dt>UniverSound</dt>
                   <dd>触り方次第で違う楽器音が出力される楽器。<br>(2019)</dd>
@@ -89,7 +98,7 @@
             </li>
             <li>
               <a href="./ChupaChups.html">
-                <img src="./images/projects/chupachaps.png" alt="除草ピックの商品画像">
+                <img src="./images/projects/chupachaps.png" alt="chupachaps">
                 <dl>
                   <dt>ラック&ピニオン式回転駆動装置を用いたチュッパチャップスを高速で開ける機械 </dt>
                   <dd>「飴を開ける」という簡単な行動に対して無駄な時間だけどワクワクする体験を提供。<br>(2019)</dd>
