--- a/Slope_Drop.html
+++ b/Slope_Drop.html
@@ -58,11 +58,11 @@
       <p>ユーザが実際に体験している様子</p>
     </div>
     <div class="about">
-      <div class="conference">
+      <div class="details">
         <h2>CONFERENCE</h2>
         <p>第197回ヒューマンコンピュータインタラクション研究会<br>2022.3.14 - 3.16<br>online</p>
       </div>
-      <div class="credit">
+      <div class="details">
         <h2>CREDIT</h2>
         <p>Concept, Software and Hardware Enginnering: Shunta Ito<br>Hardware Enginnering: Mondo Saito<br>Academic Adviser: Yasuto Nakanishi</p>
       </div>
