--- a/CV.html
+++ b/CV.html
@@ -62,7 +62,7 @@
       </div>
       <div class="details">
         <h2>Interests</h2>
-        <p>Experience Design<br>Human-Computer-Interaction<br>Virtual Reality<br>Robotics
+        <p>Experience Design<br>Human-Computer-Interaction<br>Robotics<br>Virtual Reality
         </p>
       </div>
     </div>
